# enteros-contracts

./: .gitignore  CONTRACTS.md  README.md  go.mod  index.ts  package.json  pyproject.toml  tsconfig.json
.gitea/workflows/: codegen-drift.yml  validate-contracts.yml
catalog/: README.md  catalog-entry.contract.json  catalog-entry.schema.json
mcp/: README.md  mcp-plugin-delivery.contract.json  mcp-plugin-delivery.schema.json
org-template/: README.md  org-template.contract.json  org-template.schema.json
plugin-manifest/: README.md  plugin-manifest.contract.json
promote-request/: README.md  promote-request.contract.json  promote-request.schema.json
provision-request/: README.md  provision-request.schema.json
tools/: README.md  gen-go.mjs  gen-python.mjs  gen-ts.mjs
tools/lib/: comms-schema.mjs
workspace-comms/: README.md  a2a-envelope.contract.json  a2a-envelope.schema.json  agent-card.contract.json  heartbeat.contract.json  register.contract.json  registry-contract.md
workspace-template/: README.md  workspace-template.contract.json  workspace-template.schema.json
